[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/dialogue/textbox.png" type="Texture" id=1]
[ext_resource path="res://assets/dialogue/fonts/Back to School.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/dialogue/dialogue_box.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 55
extra_spacing_bottom = 20
font_data = ExtResource( 2 )

[node name="dialogue_box" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.972549 )
anchor_right = 100.0
margin_left = 202.65
margin_top = 787.724
margin_right = 1708.65
margin_bottom = 1013.72
rect_pivot_offset = Vector2( 753, 0 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 256.67
margin_top = 822.993
margin_right = 1657.67
margin_bottom = 977.993
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "Hi everybody, this is a dialog box! I hope you'll enjoy it :) I hope there is enough space to fit all this text!
"
visible_characters = 0
text = "Hi everybody, this is a dialog box! I hope you'll enjoy it :) I hope there is enough space to fit all this text!
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="finished" from="." to="." method="_on_Node2D_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
